# soundvibes

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  mise.toml
.beads/: issues.jsonl  metadata.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release-binaries.yml
.opencode/commands/: work-on-gh-issue.md
contrib/: sv.service
docs/: acceptance-tests.md  daemon-ipc-api.md  installation.md  notifications-api.md  prd-stt-cli.md  prd.md  technical-design.md
docs/mvp/: acceptance-tests.md  prd-stt-cli.md  technical-design-stt-cli.md
models/: README.md
src/: audio.rs  daemon.rs  error.rs  ipc.rs  lib.rs  main.rs  model.rs  output.rs  types.rs  whisper.rs
tests/: acceptance.rs  whisper_integration.rs
tests/features/: daemon.feature  daemon_startup.rs  installer.feature  installer.rs  mod.rs  model.feature  model_management.rs  socket.feature  socket_ipc.rs  transcription.rs  web.feature  web.rs
web/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs
web/scripts/: smoke.mjs
web/src/layouts/: BaseLayout.astro
web/src/pages/: docs.astro  index.astro
web/src/styles/: global.css
web/tests/: smoke.spec.ts
