[package]
name = "sv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
cpal = "0.15.3"
ringbuf = "0.3.3"
alsa-sys = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"

[dev-dependencies]
hound = "3.5.1"

[build-dependencies]
bindgen = "0.71.0"
cmake = "0.1.54"
